# OpenSeesGVD

./: MANIFEST.in  Makefile  PYPI_README.md  README.md  pyproject.toml  setup.py
EXAMPLES/ExampleScripts/: DynamicShell.tcl  example1.tcl  out1.txt
OTHER/METIS/: util.c
OTHER/VS Projects/: OpenSees_others.sln
OTHER/mumps_5.3.5 with CMake/: new 1.txt
SRC/: Makefile  OPS_Globals.h  classTags.h
SRC/api/: elementAPI.h  elementAPI_Dummy.cpp  elementAPI_TCL.cpp  packages.cpp
SRC/convergenceTest/: CTestEnergyIncr.cpp  NormDispAndUnbalance.cpp  NormDispOrUnbalance.cpp
SRC/coordTransformation/: CrdTransf.cpp  CrdTransf.h  LinearCrdTransf2d.cpp  TclGeomTransfCommand.cpp
SRC/damage/: DamageModel.cpp  DamageModel.h  HystereticEnergy.cpp  HystereticEnergy.h  Kratzig.cpp  Kratzig.h  Mehanny.cpp  Mehanny.h  ParkAng.cpp  ParkAng.h
SRC/element/: Element.cpp  Element.h  TclElementCommands.cpp
SRC/handler/: BinaryFileStream.h  DataFileStream.cpp  DataFileStream.h  DataFileStreamAdd.h  FileStream.h  OPS_Stream.h  RedirectStream.cpp  RedirectStream.h  StandardStream.cpp  TCP_Stream.h  XmlFileStream.cpp  XmlFileStream.h
SRC/interpreter/: DL_Interpreter.h  OpenSeesCommands.cpp  OpenSeesCommands.h  OpenSeesCrdTransfCommands.cpp  OpenSeesElementCommands.cpp  OpenSeesFrictionModelCommands.cpp  OpenSeesMiscCommands.cpp  OpenSeesNDMaterialCommands.cpp  OpenSeesNDTestCommands.cpp  OpenSeesOutputCommands-main.cpp  OpenSeesOutputCommands.cpp  OpenSeesParameterCommands.cpp  OpenSeesPatternCommands.cpp  PythonModule.cpp  (+6 more)
Win64/: OpenSees.sln  UpgradeLog.htm  UpgradeLog2.htm
(+1178 files in other folders)
